# cherry

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  deps.edn  deps.nix  flake.nix  index.html  index.js  justfile  main.js  manifest.edn  package.json  rust-toolchain.toml  shadow-cljs.edn  webpack.config.js
crates/cherry-rs/: Cargo.toml  README.md
crates/cherry-rs/benches/: convexplano_lens.rs  f_theta_scan_lens.rs
crates/cherry-rs/src/: lib.rs
crates/cherry-rs/src/core/: mod.rs  placement.rs  ray.rs  sequential_model.rs
crates/cherry-rs/src/core/math/: constants.rs  mod.rs  vec3.rs
crates/cherry-rs/src/core/math/geometry/: mod.rs  reference_frames.rs
crates/cherry-rs/src/core/math/geometry/curves/: line.rs
crates/cherry-rs/src/core/math/geometry/surfaces/: parametric_plane.rs  quadric.rs
crates/cherry-rs/src/core/math/linalg/: mat2x2.rs  mat3x3.rs  mod.rs  quadratic.rs  rotations.rs
crates/cherry-rs/src/core/sequential_model/: builder.rs  cursor.rs  mod.rs  placement.rs  solves.rs
crates/cherry-rs/src/core/sequential_model/solves/: fno.rs  marginal_ray.rs  mod.rs
crates/cherry-rs/src/core/surfaces/: conic.rs  image.rs  iris.rs  mod.rs  object.rs  probe.rs  solvers.rs  sphere.rs  stop.rs  surface_registry.rs
crates/cherry-rs/src/examples/: biconvex_lens_finite_object.rs  concave_mirror.rs  convexplano_lens.rs  f_theta_scan_lens.rs  galvo_mirror.rs  mirrors_figure_z.rs  mod.rs  petzval_lens.rs
crates/cherry-rs/src/gui/: app.rs  colors.rs  compute.rs  convert.rs  examples.rs  mod.rs  model.rs  result_package.rs
crates/cherry-rs/src/gui/panels/: aperture.rs  fields.rs  lens_overlay.rs  materials.rs  mod.rs  surfaces.rs  system.rs  wavelengths.rs
crates/cherry-rs/src/gui/windows/: cross_section.rs  mod.rs  paraxial.rs  ray_fan.rs  specs.rs  spot_diagram.rs  system.rs
crates/cherry-rs/src/materials/ri_info/: mod.rs
crates/cherry-rs/src/specs/: aperture.rs  fields.rs  gaps.rs  surfaces.rs
crates/cherry-rs/src/views/: cross_section.rs  mod.rs  paraxial.rs
crates/cherry-rs/src/views/components/: mod.rs
crates/cherry-rs/src/views/ray_trace_3d/: mod.rs  rays.rs  trace.rs
crates/cherry-rs/tests/: biconvex_lens_finite_object.rs  concave_mirror.rs  convexplano_lens_materials.rs  convexplano_lens_ri.rs  custom_surface_registry.rs  f_theta_scan_lens.rs  from_surfaces.rs  galvo_mirror.rs  mirrors_figure_z.rs  petzval_lens.rs
raytracer/cherry-js/: Cargo.toml
raytracer/cherry-js/src/: lib.rs  system.rs
raytracer/cherry-rs/: Cargo.toml
raytracer/cherry-rs-2/: Cargo.toml  rustfmt.toml
raytracer/cherry-rs-2/src/: lib.rs
raytracer/cherry-rs-2/src/core/: mod.rs  seq.rs  sequential_model.rs
raytracer/cherry-rs-2/src/core/math/: array.rs  complex.rs  mat3.rs  mod.rs  vec3.rs
raytracer/cherry-rs-2/src/core/models/: sequential_model.rs
raytracer/cherry-rs-2/src/examples/: convexplano_lens.rs  mod.rs
raytracer/cherry-rs-2/src/materials/: mod.rs
raytracer/cherry-rs-2/src/models/: mod.rs  sequential_model.rs
raytracer/cherry-rs-2/src/optimizers/: mod.rs
raytracer/cherry-rs-2/src/specs/: aperture.rs  fields.rs  gaps.rs  materials.rs  mod.rs  surfaces.rs
raytracer/cherry-rs-2/src/systems/: mod.rs
raytracer/cherry-rs-2/src/views/: cutaway.rs  dependencies.rs  mod.rs  paraxial.rs
raytracer/cherry-rs-2/src/views/components/: mod.rs  test_cases.rs
raytracer/cherry-rs-2/src/views/ray_trace_3d/: mod.rs  rays.rs  trace.rs
raytracer/cherry-rs-2/tests/: convexplano_lens.rs
raytracer/cherry-rs/benches/: convexplano_lens.rs
raytracer/cherry-rs/examples/: convexplano_lens.rs
raytracer/cherry-rs/src/: description.rs  lib.rs  rays.rs  trace.rs
raytracer/cherry-rs/src/component_model/: mod.rs
raytracer/cherry-rs/src/core/: mod.rs  reference_frames.rs  refractive_index.rs  rotations.rs  sequential_model.rs
raytracer/cherry-rs/src/core/math/: complex.rs  constants.rs  mat2.rs  mat3.rs  mod.rs  vec2.rs  vec3.rs
raytracer/cherry-rs/src/core/math/algebra/: mod.rs
raytracer/cherry-rs/src/core/math/algebra/polynomials/: mod.rs  quadratic.rs
raytracer/cherry-rs/src/core/math/algos/: intersections.rs
raytracer/cherry-rs/src/core/math/curves/: conic.rs  mod.rs
raytracer/cherry-rs/src/core/math/geometry/: mod.rs  reference_frames.rs
raytracer/cherry-rs/src/core/math/geometry/curves/: conic.rs  mod.rs
raytracer/cherry-rs/src/core/math/geometry/solvers/: intersections.rs  mod.rs
raytracer/cherry-rs/src/core/math/linalg/: mat2.rs  mat2x2.rs  mod.rs  quadratic.rs  rotations.rs
raytracer/cherry-rs/src/core/math/surfaces/: mod.rs  parametric_plane.rs  quadric.rs
raytracer/cherry-rs/src/examples/: biconvex_lens_finite_object.rs  concave_mirror.rs  convexplano_lens.rs  convexplano_lens_regression.rs  mirrors_figure_z.rs  mod.rs  petzval_lens.rs
raytracer/cherry-rs/src/gui/: app.rs  convert.rs  examples.rs  mod.rs  model.rs
raytracer/cherry-rs/src/gui/panels/: aperture.rs  fields.rs  mod.rs  summary.rs  surfaces.rs  wavelengths.rs
raytracer/cherry-rs/src/gui/windows/: materials.rs  mod.rs
raytracer/cherry-rs/src/materials/: mod.rs
raytracer/cherry-rs/src/materials/ri_info/: mod.rs
raytracer/cherry-rs/src/math/: mod.rs  sampling.rs  vec2.rs  vec3.rs
raytracer/cherry-rs/src/paraxial_model/: mod.rs
raytracer/cherry-rs/src/specs/: fields.rs  gaps.rs  mod.rs  surfaces.rs
raytracer/cherry-rs/src/surface_model/: mod.rs
raytracer/cherry-rs/src/surface_types/: mod.rs
raytracer/cherry-rs/src/test_cases/: mod.rs
raytracer/cherry-rs/src/views/: cross_section.rs  cutaway.rs  mod.rs  paraxial.rs
raytracer/cherry-rs/src/views/components/: mod.rs
raytracer/cherry-rs/src/views/ray_trace_3d/: mod.rs  rays.rs  trace.rs
raytracer/cherry-rs/src/views/ray_trace_3d_v2/: mod.rs  rays.rs  trace.rs
raytracer/cherry-rs/tests/: biconvex_lens_finite_object.rs  concave_mirror.rs  convexplano_lens.rs  convexplano_lens_materials.rs  convexplano_lens_ri.rs  convexplano_lens_rii.rs  petzval_lens.rs  planoconvex_lens.rs
raytracer/cherry-rs/tests/common/: mod.rs  ri_info.rs
(+175 files in other folders)
