[package]
name = "cherry-js"
version = "0.1.0"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/cherry"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
cherry-rs = { path = "../cherry-rs" }
cherry-rs-2 = { path = "../cherry-rs-2" }
serde = "*"
serde-wasm-bindgen = "*"
wasm-bindgen = "0.2"
wasm-bindgen-cli = "0.2"

[dependencies.web-sys]
version = "*"
features = [
    "console"
]
