[package]
name = "cherry-rs-2"
version = "0.1.0"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/cherry"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0"
ndarray = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
