[package]
name = "cherry-rs"
version = "1.0.0"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/cherry"
edition = "2024"
description = "Tools for designing sequential optical systems"
license-file = "../../LICENSE.txt"

[lib]
crate-type = ["lib"]

[features]
ri-info = [ "dep:ria" ]

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.16", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }

ria = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"
bitcode = { version = "0.6", features = [ "serde" ] }
ndarray = { version = "0.16", features = [ "approx", "serde" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = [ "html_reports" ] }

[[bench]]
name = "convexplano_lens"
harness = false
