[package]
name = "cherry-rs"
version = "1.0.0"
authors = ["Kyle M. Douglass <kyle.m.douglass@gmail.com>"]
repository = "https://github.com/kmdouglass/cherry"
edition = "2024"
description = "Tools for designing sequential optical systems"
license-file = "../../LICENSE.txt"

[lib]
crate-type = ["lib"]

[[bin]]
name = "cherry"
path = "src/bin/cherry.rs"
required-features = [ "gui" ]

[features]
gui = [ "dep:eframe", "dep:egui", "dep:env_logger", "dep:log" ]
ri-info = [ "dep:ria" ]

[dependencies]
anyhow = "1.0"
ndarray = { version = "0.16", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }

# gui
eframe = { version = "0.32", default-features = false, optional= true, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
egui = { version = "0.32", optional = true }
log = { version = "0.4.28", optional = true }

# native gui:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11.8", optional = true }

# ri-info
ria = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"
bitcode = { version = "0.6", features = [ "serde" ] }
ndarray = { version = "0.16", features = [ "approx", "serde" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.7", features = [ "html_reports" ] }

[[bench]]
name = "convexplano_lens"
harness = false
